--- a/PixelSort/app/src/main/res/layout/activity_search.xml
+++ b/PixelSort/app/src/main/res/layout/activity_search.xml
@@ -13,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#E6333333"
-        android:orientation="vertical"/>
+        android:orientation="vertical">
+    </LinearLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/headernav"
@@ -87,21 +88,16 @@
             app:srcCompat="@drawable/icon_albums" />
     </LinearLayout>
 
-    <EditText
+    <SearchView
         android:id="@+id/searchBar"
-        android:layout_width="375dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/searchbarbackground"
-        android:drawableLeft="@drawable/searchbaricon"
-        android:hint="    Search"
-        android:padding="10dp"
-        android:textSize="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="#E9ecf0f1"
+        android:queryHint="Search"
         app:layout_constraintBottom_toTopOf="@+id/locationLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/headernav" />
+        app:layout_constraintTop_toBottomOf="@+id/headernav" />
 
     <LinearLayout
         android:id="@+id/locationLayout"
@@ -110,8 +106,7 @@
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/footernav"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchBar">
+        app:layout_constraintStart_toStartOf="parent">
 
         <View
             android:id="@+id/line1"
@@ -127,6 +122,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
@@ -134,21 +130,23 @@
                 android:textColor="#e8e8e8"
                 android:textSize="20dp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/recyclerSearchImages"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.144"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0"
                 tools:ignore="MissingConstraints" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerSearchImages"
-            android:layout_width="match_parent"
-            android:layout_height="496dp"
-            android:orientation="horizontal"
-            android:padding="6dp" />
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerSearchImages"
+                android:layout_width="match_parent"
+                android:layout_height="496dp"
+                android:orientation="horizontal"
+                android:padding="6dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
 
 
