--- a/PixelSort/app/src/main/res/layout/activity_photos.xml
+++ b/PixelSort/app/src/main/res/layout/activity_photos.xml
@@ -30,7 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:text="Profile"
+            android:text="Dashboard"
             android:textSize="26dp"
             android:textStyle="bold"
             app:layout_constraintTop_toTopOf="parent"
