added album to show to recyclerview

--- a/PixelSort/app/src/main/res/layout/activity_albums.xml
+++ b/PixelSort/app/src/main/res/layout/activity_albums.xml
@@ -99,6 +99,15 @@
         app:layout_constraintTop_toBottomOf="@+id/headernav"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <ProgressBar
+        android:id="@+id/imageProgressAl"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/footernav"
+        app:layout_constraintEnd_toEndOf="@+id/recylerAlbums"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/createNewAlbum" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recylerAlbums"
         android:layout_width="match_parent"
