--- a/PixelSort/app/src/main/res/layout/album_item.xml
+++ b/PixelSort/app/src/main/res/layout/album_item.xml
@@ -9,22 +9,42 @@
     android:elevation="16dp"
     app:cardCornerRadius="10dp">
 
-    <TextView
-        android:id="@+id/albumText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="6dp"
-        android:textColor="@color/black"
-        android:background="#70949494"
-        android:textSize="20dp"
-        android:text="Album Name" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_height="match_parent"
+        android:layout_width="match_parent">
 
-    <ImageView
-        android:id="@+id/albumImage"
-        android:layout_width="match_parent"
-        android:layout_height="175dp"
-        android:layout_gravity="center"
-        android:scaleType="centerCrop"
-        tools:ignore="MissingConstraints" />
+        <TextView
+            android:id="@+id/albumText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="6dp"
+            android:textColor="@color/black"
+            android:background="#70949494"
+            android:textSize="20dp"
+            android:text="Album Name"
+            app:layout_constraintTop_toTopOf="@id/albumImage"
+            app:layout_constraintStart_toStartOf="@id/albumImage"/>
+
+        <ImageView
+            android:id="@+id/albumImage"
+            android:layout_width="match_parent"
+            android:layout_height="175dp"
+            android:layout_gravity="center"
+            android:scaleType="centerCrop"
+            tools:ignore="MissingConstraints"/>
+
+        <ImageView
+            android:id="@+id/removeImage"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_gravity="center"
+            android:scaleType="centerCrop"
+            android:visibility="gone"
+            android:src="@drawable/remove_image"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
