--- a/PixelSort/app/src/main/res/layout/activity_album_create.xml
+++ b/PixelSort/app/src/main/res/layout/activity_album_create.xml
@@ -14,56 +14,104 @@
         android:background="#E6333333"
         android:orientation="vertical"/>
 
-    <TextView
-        android:id="@+id/albumBack"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:text="Back"
-        android:textSize="15dp"
-        android:textColor="@color/white"
-        android:layout_marginLeft="20dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerCreateAlbum"
-        />
-
-    <EditText
-        android:id="@+id/albumName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Album Name"
-        android:textSize="25dp"
-        android:textColor="@color/white"
-        android:layout_marginTop="5dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/albumBack"
-        app:layout_constraintEnd_toStartOf="@+id/saveAlbum"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerCreateAlbum"
-        />
-
-    <TextView
-        android:id="@+id/saveAlbum"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:text="Save"
-        android:textSize="15dp"
-        android:textColor="@color/white"
-        android:layout_marginRight="20dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/headernav"
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:orientation="horizontal"
+        android:background="@drawable/topnavbar"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerCreateAlbum"
-        />
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:id="@+id/albumBack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:text="Back"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            android:layout_marginLeft="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            />
+
+        <EditText
+            android:id="@+id/albumName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Album Name"
+            android:textSize="25dp"
+            android:textStyle="bold"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/albumBack"
+            app:layout_constraintEnd_toStartOf="@+id/saveAlbum"
+            />
+
+        <TextView
+            android:id="@+id/saveAlbum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:text="Save"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            android:layout_marginRight="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <LinearLayout
+        android:id="@+id/footernav"
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:orientation="horizontal"
+        android:background="@drawable/bottomnavbar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <ImageView
+            android:id="@+id/photos"
+            android:layout_width="wrap_content"
+            android:layout_height="55dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="40dp"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/icon_photos" />
+        <ImageView
+            android:id="@+id/search"
+            android:layout_width="wrap_content"
+            android:layout_height="55dp"
+            android:layout_weight="1"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            app:srcCompat="@drawable/icon_search" />
+        <ImageView
+            android:id="@+id/albums"
+            android:layout_width="wrap_content"
+            android:layout_height="55dp"
+            android:layout_weight="1"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="40dp"
+            app:srcCompat="@drawable/icon_albums" />
+    </LinearLayout>
 
     <ProgressBar
         android:id="@+id/imageProgress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/footernav"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/albumName"
+        app:layout_constraintTop_toBottomOf="@+id/headernav"
         />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -72,7 +120,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
         android:padding="6dp"
-        app:layout_constraintTop_toBottomOf="@+id/albumName"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@+id/headernav"
+        app:layout_constraintBottom_toTopOf="@id/footernav"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
