--- a/PixelSort/app/src/main/res/layout/album_item.xml
+++ b/PixelSort/app/src/main/res/layout/album_item.xml
@@ -13,6 +13,19 @@
         android:layout_height="match_parent"
         android:layout_width="match_parent">
 
+        <ImageView
+            android:id="@+id/filterImage"
+            android:layout_width="match_parent"
+            android:layout_height="175dp"
+            android:layout_gravity="center"
+            android:background="#70bdc3c7"
+            android:scaleType="centerCrop"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/albumText"
             android:layout_width="wrap_content"
